Improve main page design

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 <div class="header">
   <div>
     <h1>
-      Hello,<br />
-      I am <span class="name">Michael</span>
+      Hi,<br />
+      I'm <span class="name">Michael</span>
     </h1>
     <h2>Want to build a website?</h2>
   </div>
@@ -22,7 +22,7 @@
     }
     .header h1 {
       font-size: 3.5rem;
-      font-weight: 300;
+      font-weight: 600;
       margin: 0;
       padding: 0;
     }
@@ -65,7 +65,7 @@
     width: 400px;
   }
   .name {
-    font-weight: 600;
+    font-weight: bold;
     background-color: #37dea6;
   }
 
