--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -25,7 +25,10 @@ import Twitter from "./UI/Twitter.astro";
     align-items: center;
     background-color: #37dea6;
     height: 2rem;
-    padding: 0.2rem;
+    padding: 0.1rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
   .socials {
     display: flex;
