--- a/src/components/Prez.astro
+++ b/src/components/Prez.astro
@@ -1,58 +1,66 @@
-<div class="block">
-  <div class="text">
-    <p>If you want to create a website, you have to code!</p>
-    <p>
-      It's been my passion for years, and even if I specialised in Javascript, I
-      adapt myself and my work to the needs of my clients.
-    </p>
-    <p>
-      Next.JS, SvelteKit, Node... I have developed several websites with these
-      technologies and I would be happy to do the same for you.
-    </p>
+<div class="blocks">
+  <div class="block">
+    <div class="text">
+      <p>If you want to create a website, you have to code!</p>
+      <p>
+        It's been my passion for years, and even if I specialised in Javascript,
+        I adapt myself and my work to the needs of my clients.
+      </p>
+      <p>
+        Next.JS, SvelteKit, Node... I have developed several websites with these
+        technologies and I would be happy to do the same for you.
+      </p>
+    </div>
+    <img src="./code.svg" alt="a computer screen" />
   </div>
-  <img src="./code.svg" alt="a computer screen" />
-</div>
 
-<div class="block">
-  <div class="text middle">
-    <p>
-      In order to create a website that is both aesthetically pleasing and
-      user-friendly, I work closely with my clients to understand their business
-      goals and target audience.
-    </p>
-    <p>
-      This allows me to design a website that not only looks great, but also
-      functions properly and provides a seamless user experience.
-    </p>
+  <div class="block">
+    <div class="text middle">
+      <p>
+        In order to create a website that is both aesthetically pleasing and
+        user-friendly, I work closely with my clients to understand their
+        business goals and target audience.
+      </p>
+      <p>
+        This allows me to design a website that not only looks great, but also
+        functions properly and provides a seamless user experience.
+      </p>
+    </div>
+    <img src="./design.svg" alt="a pot with pen and pencil" />
   </div>
-  <img src="./design.svg" alt="a pot with pen and pencil" />
-</div>
 
-<div class="block">
-  <div class="text">
-    <p>
-      But my goal is not just to create a website that looks good, but one that
-      is also optimized for search engines and mobile devices.
-    </p>
-    <p>
-      By staying up to date with the latest technologies and design trends, I'm
-      able to provide my clients with a website that is modern, responsive, and
-      user-friendly.
-    </p>
+  <div class="block">
+    <div class="text">
+      <p>
+        But my goal is not just to create a website that looks good, but one
+        that is also optimized for search engines and mobile devices.
+      </p>
+      <p>
+        By staying up to date with the latest technologies and design trends,
+        I'm able to provide my clients with a website that is modern,
+        responsive, and user-friendly.
+      </p>
+    </div>
+    <img
+      src="./responsive.svg"
+      alt="a computer screen with a phone and a tablet"
+    />
   </div>
-  <img
-    src="./responsive.svg"
-    alt="a computer screen with a phone and a tablet"
-  />
 </div>
 
 <style>
+  .blocks {
+    display: flex;
+    flex-direction: column;
+    column-gap: 55px;
+    justify-content: space-evenly;
+    align-items: center;
+  }
   .block {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     flex-direction: row;
-    margin-bottom: 3rem;
     max-width: 1000px;
     margin: auto;
   }
@@ -60,13 +68,14 @@
     max-width: 350px;
   }
   .block .text {
-    max-width: 30rem;
+    max-width: 35rem;
     line-height: 2rem;
     font-size: large;
     margin: auto 0 auto 0;
+    letter-spacing: 0.1rem;
   }
 
-  @media (min-width:830px) {
+  @media (min-width: 830px) {
     .middle {
       order: 2;
     }
