--- a/src/components/UI/Twitter.astro
+++ b/src/components/UI/Twitter.astro
@@ -21,6 +21,10 @@
     color: white;
   }
   .lucide-twitter:hover {
-    color: #e8e9ea;
+    color: #1d1d21;
+    fill: white;
+    transition-property: color, fill;
+    transition-duration: 0.4s;
+    animation-timing-function: ease-in-out;
   }
 </style>
