--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import Prez from "../components/Prez.astro";
+import CTA from "../components/CTA.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <main>
     <Header />
     <Prez/>
+    <CTA/>
   </main>
 </Layout>
 
