--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const { title } = Astro.props;
     font-family: Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI",
       "Helvetica Neue", sans-serif;
     background-color: #f6f6f6;
+    color: #1d1d21;
   }
   body {
     margin: 0;
