Add projects (markdown) + clean code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
-import Prez from "../components/Prez.astro";
-import CTA from "../components/CTA.astro";
+import Header from "../components/index/Header.astro";
+import Prez from "../components/index/Prez.astro";
+import CTA from "../components/index/CTA.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to my Portfolio | Michael Breyton ">
   <main>
     <Header />
     <Prez/>
