Add width on images (lightouse improvements)

--- a/src/components/index/Prez.astro
+++ b/src/components/index/Prez.astro
@@ -11,7 +11,7 @@
         technologies and I would be happy to do the same for you.
       </p>
     </div>
-    <img src="./code.svg" alt="a computer screen" />
+    <img src="./code.svg" alt="a computer screen" width="350px" />
   </div>
 
   <div class="block">
@@ -26,7 +26,7 @@
         functions properly and provides a seamless user experience.
       </p>
     </div>
-    <img src="./design.svg" alt="a pot with pen and pencil" />
+    <img src="./design.svg" alt="a pot with pen and pencil" width="350px" />
   </div>
 
   <div class="block">
@@ -44,6 +44,7 @@
     <img
       src="./responsive.svg"
       alt="a computer screen with a phone and a tablet"
+      width="350px"
     />
   </div>
 </div>
@@ -65,6 +66,7 @@
     margin: auto;
   }
   .block img {
+    width: 100%;
     max-width: 350px;
   }
   .block .text {
