--- a/src/components/projects/Project.astro
+++ b/src/components/projects/Project.astro
@@ -14,7 +14,7 @@ const { Content, headings } = await project.render();
     <Content />
   </div>
 
-  <img src={project.data.image} alt={project.data.description} />
+  <img src={project.data.image} alt={project.data.description} width="450px" />
 </div>
 
 <style>
