Add scroll down animation + few improves

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -30,6 +30,7 @@ import Twitter from "./UI/Twitter.astro";
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 10;
   }
   .socials {
     display: flex;
