--- a/src/components/projects/Project.astro
+++ b/src/components/projects/Project.astro
@@ -24,10 +24,11 @@ const { Content, headings } = await project.render();
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
-    margin: auto auto 6rem auto;
-    line-height: 1.5rem;
+    margin: auto auto 8rem auto;
+    line-height: 1.4rem;
     padding: 0 1.5rem;
   }
+
   .vl {
     border-left: 2px solid #000;
     height: 4rem;
@@ -40,6 +41,7 @@ const { Content, headings } = await project.render();
     align-items: left;
     justify-content: center;
     max-width: 500px;
+    padding: 25px;
   }
   .project-description h1 {
     text-align: center;
