--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Prez from "../components/index/Prez.astro";
 import CTA from "../components/index/CTA.astro";
 ---
 
-<Layout title="Welcome to my Portfolio | Michael Breyton ">
+<Layout title="Michael Breyton | Portfolio">
   <main>
     <Header />
     <Prez/>
