--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -8,6 +8,7 @@
   </div>
   <object type="image/svg+xml" data="./nodeboy.svg" class="nodeboy"></object>
 </div>
+<div class="scroll-down"></div>
 
 <style>
   @media (min-width: 400px) {
@@ -21,7 +22,7 @@
       padding: 0 10%;
     }
     .header h1 {
-      font-size: 3.5rem;
+      font-size: 4rem;
       font-weight: 600;
       margin: 0;
       padding: 0;
@@ -33,6 +34,14 @@
       padding: 0;
       color: #5c5c5c;
       margin-top: 2rem;
+    }
+  }
+  @media (min-width: 1100px) {
+    .header h1 {
+      font-size: 5rem;
+    }
+    .header h2 {
+      font-size: 2.5rem;
     }
   }
 
@@ -71,6 +80,69 @@
 
   .nodeboy {
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
+  }
+
+  .scroll-down {
+    position: absolute;
+    left: 50%;
+    bottom: 50px;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    text-shadow: 0;
+    width: 33px;
+    height: 33px;
+    border-bottom: 2px solid #000000;
+    border-right: 2px solid #000000;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0%) rotate(45deg);
+    -moz-transform: translate(-50%, 0%) rotate(45deg);
+    transform: translate(-50%, 0%) rotate(45deg);
+    -webkit-animation: fade_move_down 4s ease-in-out infinite;
+    -moz-animation: fade_move_down 4s ease-in-out infinite;
+    animation: fade_move_down 4s ease-in-out infinite;
+  }
+
+  /*animated scroll arrow animation*/
+  @-webkit-keyframes fade_move_down {
+    0% {
+      -webkit-transform: translate(0, -10px) rotate(45deg);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translate(0, 10px) rotate(45deg);
+      opacity: 0;
+    }
+  }
+  @-moz-keyframes fade_move_down {
+    0% {
+      -moz-transform: translate(0, -10px) rotate(45deg);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      -moz-transform: translate(0, 10px) rotate(45deg);
+      opacity: 0;
+    }
+  }
+  @keyframes fade_move_down {
+    0% {
+      transform: translate(0, -10px) rotate(45deg);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      transform: translate(0, 10px) rotate(45deg);
+      opacity: 0;
+    }
   }
 </style>
