--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <Nav />
-    <slot />
+    <main><slot /></main>
   </body>
 </html>
 <style is:global>
@@ -28,6 +28,11 @@ const { title } = Astro.props;
       "Helvetica Neue", sans-serif;
     background-color: #f6f6f6;
     color: #1d1d21;
+  }
+  main {
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0 1rem;
   }
   body {
     margin: 0;
