--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -1,4 +1,4 @@
-<div class="header">
+<header class="header">
   <div>
     <h1>
       Hi,<br />
@@ -7,8 +7,8 @@
     <h2>Want to build a website?</h2>
   </div>
   <object type="image/svg+xml" data="./nodeboy.svg" class="nodeboy"></object>
-</div>
-<div class="scroll-down"></div>
+</header>
+<span class="scroll-down"></span>
 
 <style>
   @media (min-width: 400px) {
