--- a/src/components/index/Prez.astro
+++ b/src/components/index/Prez.astro
@@ -1,5 +1,5 @@
-<div class="blocks">
-  <div class="block">
+<main class="blocks">
+  <section class="block">
     <div class="text">
       <p>If you want to create a website, you have to code!</p>
       <p>
@@ -11,10 +11,10 @@
         technologies and I would be happy to do the same for you.
       </p>
     </div>
-    <img src="./code.svg" alt="a computer screen" width="350px" />
-  </div>
+    <img src="./code.svg" alt="a computer screen" width="350" height="350" />
+  </section>
 
-  <div class="block">
+  <section class="block">
     <div class="text middle">
       <p>
         In order to create a website that is both aesthetically pleasing and
@@ -26,10 +26,15 @@
         functions properly and provides a seamless user experience.
       </p>
     </div>
-    <img src="./design.svg" alt="a pot with pen and pencil" width="350px" />
-  </div>
+    <img
+      src="./design.svg"
+      alt="a pot with pen and pencil"
+      width="350"
+      height="350"
+    />
+  </section>
 
-  <div class="block">
+  <section class="block">
     <div class="text">
       <p>
         But my goal is not just to create a website that looks good, but one
@@ -44,10 +49,11 @@
     <img
       src="./responsive.svg"
       alt="a computer screen with a phone and a tablet"
-      width="350px"
+      width="350"
+      height="350"
     />
-  </div>
-</div>
+  </section>
+</main>
 
 <style>
   .blocks {
