--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,26 +3,31 @@ import Linkedin from "./UI/Linkedin.astro";
 import Mail from "./UI/Mail.astro";
 import Twitter from "./UI/Twitter.astro";
 ---
-
+<header>
 <nav class="nav">
-  <a href="/" class="logo">Michael Breyton</a>
-  <div class="socials">
-    <a href="https://www.linkedin.com/in/mbreyton/"><Linkedin /></a>
-    <a href="https://www.twitter.com/michael_webdev" target="_blank"
-      ><Twitter /></a
+  <a href="/" class="logo"><img src="/public/michael.svg" alt="michael" width="100" height="20"></a>
+  <menu class="socials">
+    <a
+      href="https://www.linkedin.com/in/mbreyton/"
+      aria-label="My Linkedin profile"><Linkedin /></a
     >
-    <a href="mailto:mail@michaelbreyton.dev"><Mail /></a>
-  </div>
+    <a
+      href="https://www.twitter.com/michael_webdev"
+      aria-label="My Twitter profile"
+      target="_blank"><Twitter /></a
+    >
+    <a href="mailto:mail@michaelbreyton.dev" aria-label="My email adress"
+      ><Mail /></a
+    >
+  </menu>
 </nav>
+</header>
+
 
 <style>
-  .lucide:hover {
-    fill: red;
-    stroke: red;
-  }
   nav {
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     align-items: center;
     background-color: #37dea6;
     height: 2rem;
@@ -35,20 +40,12 @@ import Twitter from "./UI/Twitter.astro";
   .socials {
     display: flex;
     justify-content: space-between;
-    width: 6rem;
-    margin-right: 1rem;
+    gap: 1rem;
+    padding-right: 1rem;
   }
 
   .logo {
-    margin-left: 2rem;
-    margin-right:auto;
-    color: #F6F6F6;
-    font-size: 1rem;
-  text-decoration: underline 0.1em rgba(255, 255, 255, 0);
-  transition: text-decoration-color 300ms;
+    padding-left: 1rem;
+    display: flex;
   }
-
-  .logo:hover {
-  text-decoration-color: #F6F6F6;
-}
 </style>
