--- a/src/components/index/CTA.astro
+++ b/src/components/index/CTA.astro
@@ -1,10 +1,10 @@
-<div>
+<footer class="footer">
   <a href="/projects" class="underline">Wanna see some of my projects?</a>
-  <img src="./book.svg" alt="book" />
-</div>
+  <img src="./book.svg" alt="book" width="100" height="100" />
+</footer>
 
 <style>
-  div {
+  .footer {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -12,7 +12,6 @@
     height: 100%;
     margin-top: 2rem;
     margin-bottom: 5rem;
-
   }
   a {
     text-decoration: none;
@@ -21,16 +20,15 @@
   }
 
   .underline {
-  background-image: linear-gradient(120deg, #37dea6 0%, #8fd3f4 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.2em;
-  background-position: 0 88%;
-  transition: background-size 0.25s ease-in;
-  &:hover {
-    background-size: 100% 88%;
+    background-image: linear-gradient(120deg, #37dea6 0%, #8fd3f4 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+    &:hover {
+      background-size: 100% 88%;
+    }
   }
-}
-
 
   img {
     width: 100%;
