--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,8 +18,10 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Nav />
-    <main><slot /></main>
+      <Nav />
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
 <style is:global>
