--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,7 +5,7 @@ import Twitter from "./UI/Twitter.astro";
 ---
 <header>
 <nav class="nav">
-  <a href="/" class="logo"><img src="/public/michael.svg" alt="michael" width="100" height="20"></a>
+  <a href="/" class="logo"><img src="./michael.svg" alt="michael" width="100" height="20"></a>
   <menu class="socials">
     <a
       href="https://www.linkedin.com/in/mbreyton/"
