Fixed accessibility and SEO issues

--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -6,7 +6,11 @@
     </h1>
     <h2>Want to build a website?</h2>
   </div>
-  <object type="image/svg+xml" data="./nodeboy.svg" class="nodeboy"></object>
+  <object
+    type="image/svg+xml"
+    data="./nodeboy.svg"
+    class="nodeboy"
+    aria-labelledby="A developper in front of his computer"></object>
 </header>
 <span class="scroll-down"></span>
 
