--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,11 +14,15 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="Michael Breyton" content="Welcome to my Portfolio" />
+    <meta
+      name="description"
+      content="Welcome to my Portfolio | Michael BREYTON"
+    />
+    <meta name="author" content="Michael BREYTON" />
     <title>{title}</title>
   </head>
   <body>
-      <Nav />
+    <Nav />
     <main>
       <slot />
     </main>
