--- a/src/components/projects/Header.astro
+++ b/src/components/projects/Header.astro
@@ -9,7 +9,8 @@
     type="image/svg+xml"
     data="./codeprez.svg"
     class="codeprez"
-    aria-labelledby="A developper in front of a computer"></object>
+    aria-label="A developper in front of a computer"
+    title="A developper in front of a computer"></object>
 </section>
 
 <style>
