--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -27,13 +27,14 @@
     }
     .header h1 {
       font-size: 4rem;
-      font-weight: 600;
+      font-weight: 900;
+      font-style: italic;
       margin: 0;
       padding: 0;
     }
     .header h2 {
       font-size: 2rem;
-      font-weight: 400;
+      font-weight: 500;
       margin: 0;
       padding: 0;
       color: #5c5c5c;
@@ -56,7 +57,6 @@
       flex-direction: row;
       justify-content: space-evenly;
       align-items: center;
-      height: 100vh;
       padding: 0 10%;
     }
     .header h1 {
