--- a/src/components/projects/Header.astro
+++ b/src/components/projects/Header.astro
@@ -27,6 +27,7 @@
     .header h1 {
       font-size: 3.5rem;
       font-weight: 600;
+      font-style: italic;
       margin: 0;
       padding: 0;
     }
@@ -47,12 +48,11 @@
       flex-direction: row;
       justify-content: space-evenly;
       align-items: center;
-      height: 100vh;
       padding: 0 10%;
     }
     .header h1 {
       font-size: 2rem;
-      font-weight: 300;
+      font-weight: 900;
       margin: 0;
       padding: 0;
     }
