--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Nav from "../components/Nav.astro";
+import "../css/reset.css";
 import "../css/global.css";
 export interface Props {
   title: string;
@@ -19,6 +20,11 @@ const { title } = Astro.props;
       content="Welcome to my Portfolio | Michael BREYTON"
     />
     <meta name="author" content="Michael BREYTON" />
+    <link rel="preconnect" href="https://fonts.bunny.net" />
+    <link
+      href="https://fonts.bunny.net/css?family=fira-sans:400,800"
+      rel="stylesheet"
+    />
     <title>{title}</title>
   </head>
   <body>
@@ -30,10 +36,16 @@ const { title } = Astro.props;
 </html>
 <style is:global>
   html {
-    font-family: Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
       "Helvetica Neue", sans-serif;
     background-color: #f6f6f6;
     color: #1d1d21;
+  }
+  h1 {
+    font-weight: 900;
+  }
+  p {
+    font-weight: normal;
   }
   main {
     max-width: 1600px;
