--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -10,7 +10,9 @@
     type="image/svg+xml"
     data="./nodeboy.svg"
     class="nodeboy"
-    aria-labelledby="A developper in front of his computer"></object>
+    aria-labelledby="A developper in front of his computer"
+    aria-label="A developper in front of his computer"
+    title="A developper in front of his computer"></object>
 </header>
 <span class="scroll-down"></span>
 
