Clean CSS + add blobs

--- a/src/components/index/Prez.astro
+++ b/src/components/index/Prez.astro
@@ -11,7 +11,7 @@
         technologies and I would be happy to do the same for you.
       </p>
     </div>
-    <img src="./code.svg" alt="a computer screen" width="350" height="350" />
+    <img src="./code.svg" alt="a computer screen" width="250" height="250" />
   </section>
 
   <section class="block">
@@ -29,8 +29,8 @@
     <img
       src="./design.svg"
       alt="a pot with pen and pencil"
-      width="350"
-      height="350"
+      width="250"
+      height="250"
     />
   </section>
 
@@ -48,9 +48,9 @@
     </div>
     <img
       src="./responsive.svg"
-      alt="a computer screen with a phone and a tablet"
-      width="350"
-      height="350"
+      alt="a computer screen, a phone, and a tablet"
+      width="250"
+      height="250"
     />
   </section>
 </main>
@@ -80,12 +80,17 @@
     line-height: 2rem;
     font-size: large;
     margin: auto 0 auto 0;
+    padding: 1rem;
     letter-spacing: 0.1rem;
   }
 
   @media (min-width: 830px) {
     .middle {
       order: 2;
+    }
+
+    .block img {
+      max-width: 250px;
     }
   }
 </style>
