--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -27,20 +27,14 @@ import Twitter from "./UI/Twitter.astro";
 </header>
 
 <style>
-  header {
-    margin-bottom: 3rem;
-  }
   .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #37dea6;
     height: 2rem;
-    padding: 0.1rem;
-    position: fixed;
-    top: 0;
+    padding: 0.1rem 0;
     width: 100%;
-    z-index: 10;
   }
   .socials {
     display: flex;
