--- a/src/components/index/CTA.astro
+++ b/src/components/index/CTA.astro
@@ -10,28 +10,36 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    margin-top: 2rem;
-    margin-bottom: 5rem;
+    padding-top: 2rem;
+    padding-bottom: 5rem;
   }
-  a {
-    text-decoration: none;
-    color: #1d1d21;
-    font-size: 2rem;
+
+  .footer img {
+    display: none;
   }
 
   .underline {
-    background-image: linear-gradient(120deg, #37dea6 0%, #8fd3f4 100%);
-    background-repeat: no-repeat;
-    background-size: 100% 0.2em;
-    background-position: 0 88%;
-    transition: background-size 0.25s ease-in;
-    &:hover {
-      background-size: 100% 88%;
-    }
+    color: var(--accent-color);
+    font-size: 2rem;
+    text-align: center;
+    font-weight: 600;
   }
 
-  img {
-    width: 100%;
-    max-width: 100px;
+  @media (min-width: 768px) {
+    .footer img {
+      display: initial;
+    }
+    .underline {
+      text-decoration: none;
+      color: #1d1d21;
+      background-image: linear-gradient(120deg, #37dea6 0%, #8fd3f4 100%);
+      background-repeat: no-repeat;
+      background-size: 100% 0.2em;
+      background-position: 0 88%;
+      transition: background-size 0.25s ease-in;
+      &:hover {
+        background-size: 100% 88%;
+      }
+    }
   }
 </style>
