--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -1,10 +1,10 @@
 <header class="header">
-  <div>
-    <h1>
+  <div class="header__text">
+    <h1 class="title">
       Hi,<br />
       I'm <span class="name">Michael</span>
     </h1>
-    <h2>Want to build a website?</h2>
+    <h2 class="subtitle">Want to build a website?</h2>
   </div>
   <object
     type="image/svg+xml"
@@ -14,141 +14,58 @@
     aria-label="A developper in front of his computer"
     title="A developper in front of his computer"></object>
 </header>
-<span class="scroll-down"></span>
 
 <style>
-  @media (min-width: 400px) {
-    .header {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      height: 100vh;
-      padding: 0 10%;
-    }
-    .header h1 {
-      font-size: 4rem;
-      font-weight: 900;
-      font-style: italic;
-      margin: 0;
-      padding: 0;
-    }
-    .header h2 {
-      font-size: 2rem;
-      font-weight: 500;
-      margin: 0;
-      padding: 0;
-      color: #5c5c5c;
-      margin-top: 2rem;
-    }
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-  @media (min-width: 1100px) {
-    .header h1 {
-      font-size: 5rem;
-    }
-    .header h2 {
-      font-size: 2.5rem;
-    }
+  .header__text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .title {
+    font-style: italic;
+    font-size: 3rem;
+    margin-bottom: 0;
   }
 
-  @media (max-width: 400px) {
-    .header {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      padding: 0 10%;
-    }
-    .header h1 {
-      font-size: 2rem;
-      font-weight: 300;
-      margin: 0;
-      padding: 0;
-    }
-    .header h2 {
-      font-size: 1rem;
-      font-weight: 400;
-      margin: 0;
-      padding: 0;
-      color: #5c5c5c;
-      margin-top: 2rem;
-    }
-  }
-  .header object {
-    width: 400px;
-  }
   .name {
     font-weight: bold;
-    background-color: #37dea6;
+    background-color: var(--accent-color);
+  }
+  .subtitle {
+    color: var(--secondary-color);
+    font-weight: 600;
   }
 
   .nodeboy {
-    width: 100%;
-    max-width: 600px;
+    max-width: 400px;
   }
 
-  .scroll-down {
-    position: absolute;
-    left: 50%;
-    bottom: 50px;
-    display: block;
-    text-align: center;
-    font-size: 20px;
-    text-decoration: none;
-    text-shadow: 0;
-    width: 33px;
-    height: 33px;
-    border-bottom: 2px solid #000000;
-    border-right: 2px solid #000000;
-    left: 50%;
-    -webkit-transform: translate(-50%, 0%) rotate(45deg);
-    -moz-transform: translate(-50%, 0%) rotate(45deg);
-    transform: translate(-50%, 0%) rotate(45deg);
-    -webkit-animation: fade_move_down 4s ease-in-out infinite;
-    -moz-animation: fade_move_down 4s ease-in-out infinite;
-    animation: fade_move_down 4s ease-in-out infinite;
+  @media (min-width: 768px) {
+    .header {
+      flex-direction: row;
+    }
   }
 
-  /*animated scroll arrow animation*/
-  @-webkit-keyframes fade_move_down {
-    0% {
-      -webkit-transform: translate(0, -10px) rotate(45deg);
-      opacity: 0;
+  @media (min-width: 1200px) {
+    .header {
+      gap: 6rem;
+      width: 100%;
+      height: 35rem;
+      align-content: end;
+      flex-wrap: wrap;
+      margin-bottom: 5rem;
     }
-    50% {
-      opacity: 1;
+    .title {
+      font-size: 5rem;
     }
-    100% {
-      -webkit-transform: translate(0, 10px) rotate(45deg);
-      opacity: 0;
-    }
-  }
-  @-moz-keyframes fade_move_down {
-    0% {
-      -moz-transform: translate(0, -10px) rotate(45deg);
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      -moz-transform: translate(0, 10px) rotate(45deg);
-      opacity: 0;
-    }
-  }
-  @keyframes fade_move_down {
-    0% {
-      transform: translate(0, -10px) rotate(45deg);
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      transform: translate(0, 10px) rotate(45deg);
-      opacity: 0;
+    .subtitle {
+      font-size: 1.8rem;
     }
   }
 </style>
