--- a/src/components/projects/Header.astro
+++ b/src/components/projects/Header.astro
@@ -14,68 +14,36 @@
 </section>
 
 <style>
-  @media (min-width: 400px) {
-    .header {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      height: 30rem;
-      padding: 0 10%;
-    }
-    .header h1 {
-      font-size: 3.5rem;
-      font-weight: 600;
-      font-style: italic;
-      margin: 0;
-      padding: 0;
-    }
-    .header h2 {
-      font-size: 2rem;
-      font-weight: 400;
-      margin: 0;
-      padding: 0;
-      color: #5c5c5c;
-      margin-top: 2rem;
-    }
+  .header {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-style: italic;
+    font-size: 1.5rem;
   }
 
-  @media (max-width: 400px) {
-    .header {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      padding: 0 10%;
-    }
-    .header h1 {
-      font-size: 2rem;
-      font-weight: 900;
-      margin: 0;
-      padding: 0;
-    }
-    .header h2 {
-      font-size: 1rem;
-      font-weight: 400;
-      margin: 0;
-      padding: 0;
-      color: #5c5c5c;
-      margin-top: 2rem;
-    }
-  }
-  .header object {
-    width: 400px;
-  }
   .name {
-    font-weight: bold;
     background-color: #37dea6;
-    margin-left: 5rem;
+    margin-left: 4rem;
   }
 
   .codeprez {
-    width: 100%;
-    max-width: 300px;
+    max-width: 200px;
+    margin: -2rem;
+  }
+
+  @media (min-width: 1200px) {
+    .header {
+      font-size: 2rem;
+      flex-direction: row;
+      align-content: center;
+      gap: 10rem;
+      height: 25rem;
+    }
+    .codeprez {
+      max-width: 300px;
+    }
   }
 </style>
