--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,3 +1,9 @@
+:root {
+  --background-color: #f6f6f6;
+  --secondary-color: #5c5c5c;
+  --accent-color: #37dea6;
+}
+
 @font-face {
   font-family: "Fira Sans";
   src: url("/fonts/FiraSans-Regular.ttf") format("truetype");
@@ -26,4 +32,19 @@
   font-weight: 600;
   font-style: normal;
   font-display: swap;
+}
+
+html {
+  font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Helvetica Neue", sans-serif;
+  background-color: var(--background-color);
+  color: #1d1d21;
+}
+
+code {
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+body {
 }
