--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,20 @@ import CTA from "../components/index/CTA.astro";
 ---
 
 <Layout title="Michael Breyton | Portfolio">
+  <div class="container">
     <Header />
-    <Prez/>
-    <CTA/>
+    <Prez />
+    <CTA />
+  </div>
 </Layout>
+
+<style>
+  @media (min-width: 1200px) {
+    .container {
+      background-image: url(./blobIndex.svg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: 50% 2.5vh;
+    }
+  }
+</style>
