Fix bg url path

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -29,7 +29,7 @@ const projects = await getCollection("projects");
   }
   @media (min-width: 1200px) {
     .container {
-      background-image: url(./blobProject.svg);
+      background-image: url(/blobProject.svg);
       background-repeat: no-repeat;
       background-size: cover;
       background-position-y: -10vh;
