Replace animated nodeboy with static one

--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -6,13 +6,13 @@
     </h1>
     <h2 class="subtitle">Want to build a website?</h2>
   </div>
-  <object
-    type="image/svg+xml"
-    data="./nodeboy.svg"
+  <img
+    src="./nodeboy.svg"
     class="nodeboy"
     aria-labelledby="A developper in front of his computer"
     aria-label="A developper in front of his computer"
-    title="A developper in front of his computer"></object>
+    title="A developper in front of his computer"
+  />
 </header>
 
 <style>
