--- a/src/components/index/Header.astro
+++ b/src/components/index/Header.astro
@@ -12,6 +12,8 @@
     aria-labelledby="A developper in front of his computer"
     aria-label="A developper in front of his computer"
     title="A developper in front of his computer"
+    width="400"
+    height="400"
   />
 </header>
 
@@ -43,7 +45,7 @@
   }
 
   .nodeboy {
-    max-width: 400px;
+    max-width: 300px;
   }
 
   @media (min-width: 768px) {
@@ -66,6 +68,9 @@
     }
     .subtitle {
       font-size: 1.8rem;
+    }
+    .nodeboy {
+      max-width: 400px;
     }
   }
 </style>
