Change link color (accessibility issue)

--- a/src/components/index/CTA.astro
+++ b/src/components/index/CTA.astro
@@ -19,7 +19,7 @@
   }
 
   .underline {
-    color: var(--accent-color);
+    color: #159f70;
     font-size: 2rem;
     text-align: center;
     font-weight: 600;
