--- a/src/components/projects/Project.astro
+++ b/src/components/projects/Project.astro
@@ -13,8 +13,15 @@ const { Content } = await project.render();
     <div class="vl"></div>
     <Content />
   </div>
-
-  <img src={project.data.image} alt={project.data.description} width="450px" />
+  <div class="project-show">
+    <img
+      class="project-image"
+      src={project.data.image}
+      alt={project.data.description}
+      width="450px"
+    />
+    <a href={project.data.url} target="_blank">🔗 {project.data.url}</a>
+  </div>
 </div>
 
 <style>
@@ -47,7 +54,27 @@ const { Content } = await project.render();
     text-align: center;
   }
 
-  .project img {
+  .project-show {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .project-show a {
+    text-decoration: none;
+    font-size: larger;
+    letter-spacing: 1.2px;
+    padding: 1rem 0;
+    color: #1c8c67;
+    max-width: fit-content;
+    transition: all 0.2s ease-in;
+  }
+
+  .project-show a:hover {
+    color: var(--accent-color);
+  }
+
+  .project-image {
     width: 100%;
     max-width: 550px;
   }
@@ -59,9 +86,15 @@ const { Content } = await project.render();
     .project-description {
       order: 1;
     }
-    .project img {
+    .project-image {
       order: 2;
       margin-top: 2rem;
+    }
+    .project-show {
+      order: 2;
+    }
+    .project-show a {
+      order: 2;
     }
   }
 </style>
