--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,12 +2,13 @@
 import Linkedin from "./UI/Linkedin.astro";
 import Mail from "./UI/Mail.astro";
 import Twitter from "./UI/Twitter.astro";
+import michael from "/michael.svg"
 ---
 
 <header>
   <nav class="nav">
     <a href="/" class="logo"
-      ><img src="./michael.svg" alt="michael" width="100" height="20" /></a
+      ><img src={michael} alt="michael" width="100" height="20" /></a
     >
     <menu class="socials">
       <a
