--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,8 +24,14 @@ const { title } = Astro.props;
   </head>
   <body>
     <Nav />
-    <main>
       <slot />
-    </main>
   </body>
 </html>
+
+<style>
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+</style>
